crates/reinhardt-pages/tests/ui/page/fail/boolean_attr_bool_false.stderr
error: Boolean attribute 'disabled' cannot be set to `false`.
       To disable a boolean attribute, omit it entirely:
       - Attribute present = true (e.g., `disabled` or `disabled: true`)
       - Attribute absent = false (just remove `disabled`)

       Use a variable or expression for dynamic boolean values:
       Correct:   disabled: is_disabled
       Correct:   disabled: state.is_active()
 --> tests/ui/page/fail/boolean_attr_bool_false.rs:8:4
  |
8 |             disabled: false,
  |             ^^^^^^^^
